# docs/swagger.json
@@ -190,6 +190,12 @@
                     },
                     {
                         "type": "integer",
+                        "description": "Coffee ID to find similar coffees for",
+                        "name": "similar_to",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
                         "description": "Page number (default 1)",
                         "name": "page",
                         "in": "query"
@@ -587,6 +593,9 @@
                         "$ref": "#/definitions/domain.SimilarCoffee"
                     }
                 },
+                "similarity_score": {
+                    "type": "number"
+                },
                 "species": {
                     "type": "string"
                 },
@@ -677,6 +686,9 @@
                 },
                 "roaster_slug": {
                     "type": "string"
+                },
+                "similarity_score": {
+                    "type": "number"
                 },
                 "species": {
                     "type": "string"
